; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ov511.c_sensor_set_picture.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ov511.c_sensor_set_picture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_ov511 = type { i32 }
%struct.video_picture = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"sensor_set_picture\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_ov511*, %struct.video_picture*)* @sensor_set_picture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sensor_set_picture(%struct.usb_ov511* %0, %struct.video_picture* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.usb_ov511*, align 8
  %5 = alloca %struct.video_picture*, align 8
  %6 = alloca i32, align 4
  store %struct.usb_ov511* %0, %struct.usb_ov511** %4, align 8
  store %struct.video_picture* %1, %struct.video_picture** %5, align 8
  %7 = call i32 @PDEBUG(i32 4, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.video_picture*, %struct.video_picture** %5, align 8
  %9 = getelementptr inbounds %struct.video_picture, %struct.video_picture* %8, i32 0, i32 4
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.usb_ov511*, %struct.usb_ov511** %4, align 8
  %12 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.usb_ov511*, %struct.usb_ov511** %4, align 8
  %14 = load %struct.video_picture*, %struct.video_picture** %5, align 8
  %15 = getelementptr inbounds %struct.video_picture, %struct.video_picture* %14, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @sensor_set_contrast(%struct.usb_ov511* %13, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i64 @FATAL_ERROR(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %3, align 4
  br label %57

23:                                               ; preds = %2
  %24 = load %struct.usb_ov511*, %struct.usb_ov511** %4, align 8
  %25 = load %struct.video_picture*, %struct.video_picture** %5, align 8
  %26 = getelementptr inbounds %struct.video_picture, %struct.video_picture* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @sensor_set_brightness(%struct.usb_ov511* %24, i32 %27)
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i64 @FATAL_ERROR(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %23
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %3, align 4
  br label %57

34:                                               ; preds = %23
  %35 = load %struct.usb_ov511*, %struct.usb_ov511** %4, align 8
  %36 = load %struct.video_picture*, %struct.video_picture** %5, align 8
  %37 = getelementptr inbounds %struct.video_picture, %struct.video_picture* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @sensor_set_saturation(%struct.usb_ov511* %35, i32 %38)
  store i32 %39, i32* %6, align 4
  %40 = load i32, i32* %6, align 4
  %41 = call i64 @FATAL_ERROR(i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %34
  %44 = load i32, i32* %6, align 4
  store i32 %44, i32* %3, align 4
  br label %57

45:                                               ; preds = %34
  %46 = load %struct.usb_ov511*, %struct.usb_ov511** %4, align 8
  %47 = load %struct.video_picture*, %struct.video_picture** %5, align 8
  %48 = getelementptr inbounds %struct.video_picture, %struct.video_picture* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @sensor_set_hue(%struct.usb_ov511* %46, i32 %49)
  store i32 %50, i32* %6, align 4
  %51 = load i32, i32* %6, align 4
  %52 = call i64 @FATAL_ERROR(i32 %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %56

54:                                               ; preds = %45
  %55 = load i32, i32* %6, align 4
  store i32 %55, i32* %3, align 4
  br label %57

56:                                               ; preds = %45
  store i32 0, i32* %3, align 4
  br label %57

57:                                               ; preds = %56, %54, %43, %32, %21
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local i32 @PDEBUG(i32, i8*) #1

declare dso_local i32 @sensor_set_contrast(%struct.usb_ov511*, i32) #1

declare dso_local i64 @FATAL_ERROR(i32) #1

declare dso_local i32 @sensor_set_brightness(%struct.usb_ov511*, i32) #1

declare dso_local i32 @sensor_set_saturation(%struct.usb_ov511*, i32) #1

declare dso_local i32 @sensor_set_hue(%struct.usb_ov511*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
